# ThetaGP

./: .clang-format  .clang-tidy  .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  README.md  compile_proto.cmake  deps_config.lua  formatter.sh  tool.lua
configs/: config.lua
configs/BoringTechH743/: BoardConfig.lua
configs/ThetaGPH7/: BoardConfig.lua
lib/: CMakeLists.txt
lib/CRC32/: CMakeLists.txt
lib/Drivers/CMSIS/DSP/Source/TransformFunctions/: arm_rfft_fast_f16.c
openocd/: stm32h7x_dual_bank-cmsis-dap.cfg
platform/: CMakeLists.txt
platform/STM32/cmake/: toolchain.cmake
platform/STM32/link/: STM32H743XX_FLASH.ld
platform/STM32/peripherals/: bus_spi.cpp  bus_uart.cpp  dma.cpp  dmamgr.cpp  gpio.cpp  nvic_exti.cpp  timer.cpp  usbhw.cpp
platform/STM32/startup/: startup_stm32h743xx.s
platform/STM32/system/: stm32h7xx_hal_conf.h  stm32h7xx_it.c  stm32h7xx_it.h  syscalls.c  sysmem.c  system_stm32h7xx.c
scripts/: fetch_deps.lua  generate_config.lua
scripts/config_lib/generators/: cmake.lua  header.lua  init.lua  keypad.lua  log.lua  spi.lua  uart.lua  usb.lua
scripts/config_lib/utils/: init.lua  log.lua  pin_parser.lua  table_utils.lua
scripts/config_lib/validators/: board_info.lua  init.lua  keypad.lua  log.lua  uart.lua  usb.lua
src/: CMakeLists.txt  ThetaGP.cpp  ThetaGP.h  ThetaGPTasks.cpp  build_info.h  core.cpp  core.h  main.cpp  mbedtls_config.h  taskmanager.cpp  taskmanager.h  tusb_config.h
src/conf/: tusb_config.h
src/drivers/device/: device.h  devicemanager.cpp  devicemanager.h  devicemgr.cpp  devicemgr.h  devmem.cpp  devmem.h  general_device.cpp  general_device.h  keypad.cpp  keypad.h  logger.cpp  logger.h  system_timer.cpp  system_timer.h  systimer.cpp  systimer.h
src/drivers/device/flash/: flash_base.h  flash_w25qxx.cpp  flash_w25qxx.h  w25qxx.c  w25qxx.h  w25qxx_flash.cpp  w25qxx_flash.h
src/drivers/device/gpinput/: gp_input_device.cpp  gp_input_device.h  gp_input_enums.h  gpdriver.h  usbdriver.cpp  usbdriver.h  usblistener.h
src/drivers/device/gpinput/hid/: HIDDescriptors.h  HIDDriver.cpp  HIDDriver.h
src/drivers/device/gpinput/shared/: driverhelper.h
src/drivers/gpdriver/: gpdriver.h  gpdrivermanager.cpp  gpdrivermanager.h  gpdrivermgr.cpp  gpdrivermgr.h  usbcore.cpp  usbcore.h  usbdriver.cpp  usbdriver.h  usblistener.h
src/drivers/gpdriver/hid/: HIDDescriptors.h  HIDDriver.cpp  HIDDriver.h
src/drivers/gpdriver/shared/: driverhelper.h
src/drivers/impl/: gpio.cpp  gpio.h  nvic_exti.cpp  nvic_exti.h
src/drivers/peripherals/: bus.h  dma.h  dma_manager.h  gpio.cpp  gpio.h  nvic.h  nvic_exti.cpp  nvic_exti.h  peripheralsmgr.cpp  peripheralsmgr.h  systick.c  systick.h  timer.cpp  timer.h  usb.cpp  usb.h  usbhw.cpp  usbhw.h
src/drivers/peripherals/bus/: bus.cpp  bus.h  bus_spi.cpp  bus_spi.h  bus_uart.cpp  bus_uart.h  busmem.cpp  busmem.h
src/drivers/peripherals/usb/: tusb_port.cpp  usb.cpp  usb.h
src/gamepad/: gamepad.cpp  gamepad.h  gamepadconfig.h  gamepadenums.h  gamepadstate.cpp  gamepadstate.h
src/gamepad/mempool/: mempool.cpp  mempool.h  mempoolmanager.cpp  mempoolmanager.h
src/gamepad/scheduler/: scheduler.cpp  scheduler.h  taskmanage.cpp  tasks.cpp
src/utils/: atomic.h  maths.c  maths.h  strtol.c  strtol.h  time.h  types.h  utils.h
src/utils/log/: log.c  log.h
src/utils/mempool/: mempool.cpp  mempool.h  mempoolmanager.cpp  mempoolmanager.h
